# main/http_server/axe-os/src/app/layout/app.menu.component.ts
@@ -35,6 +35,7 @@ export class AppMenuComponent implements OnInit {
           { label: 'Network', icon: 'pi pi-fw pi-wifi', routerLink: ['network'] },
           { label: 'Theme', icon: 'pi pi-fw pi-palette', routerLink: ['design'] },
           { label: 'Settings', icon: 'pi pi-fw pi-cog', routerLink: ['settings'] },
+          { label: 'Autotune', icon: 'pi pi-fw pi-sliders-h', routerLink: ['autotune'] },
           { label: 'Update', icon: 'pi pi-fw pi-sync', routerLink: ['update'] },
           { separator: true },
 
@@ -44,3 +45,4 @@ export class AppMenuComponent implements OnInit {
     ];
   }
 }
+
