# main/http_server/axe-os/src/app/services/system.service.ts
@@ -4,6 +4,7 @@ import { delay, Observable, of, timeout, from } from 'rxjs';
 import { eChartLabel } from 'src/models/enum/eChartLabel';
 import { chartLabelKey } from 'src/models/enum/eChartLabel';
 import { chartLabelValue } from 'src/models/enum/eChartLabel';
+import { IAutotuneSettings } from 'src/models/IAutotuneSettings';
 import {
   SystemInfo as ISystemInfo,
   SystemStatistics as ISystemStatistics,
@@ -74,6 +75,7 @@ export class SystemApiService {
         freeHeapSpiram: 200504,
         coreVoltage: 1200,
         coreVoltageActual: 1200,
+        coreVoltageSet: 1200,
         hostname: "Bitaxe",
         macAddr: "2C:54:91:88:C9:E3",
         ssid: "default",
@@ -392,4 +394,28 @@ export class SystemApiService {
   }
 
 
+
+
+  public getAutotune() {
+    if (environment.production) {
+      return this.httpClient.get<IAutotuneSettings>('/api/system/autotune').pipe(timeout(5000));
+    }
+
+    // Mock data for development
+    return of({
+      power_limit: 20,
+      fan_limit: 75,
+      max_volt_asic: 1400,
+      max_freq_asic: 1000,
+      max_temp_asic: 65,
+      max_temp_vr: 85,
+      auto_tune: false,
+      osh_pow_limit: 0.2,
+      osh_fan_limit: 5,
+    }).pipe(delay(1000));
+  }
+
+  public updateAutotune(data: any) {
+    return this.httpClient.post('/api/system/autotune', data);
+  }
 }
